# auto-trading-bot

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG.md.bak_20251003182153  Dockerfile  Dockerfile.exporter  MCP_SETUP.md  MIGRATION.md  README.md  README.md.bak_20251003180055  REPORTING.md  alerts.py  baseline.py  broker_binance.py  config.example.json  config.py  config.py.bak_20251003174848  config.py.bak_20251003214926  config.schema.json  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.yml  exchange_api.py  fix_todo.py  indicators.py  main.py  mcp_server.py  metrics.py  pr_body.md  pyproject.toml  pyproject.toml.bak_20251003182144  pytest.ini  reporter.py  requirements-dev.txt  requirements-mcp.txt  requirements.txt  risk.py  slack_notify.py  strategy.py  strategy.py.bak_20251003180717  (+7 more)
archive/: trades_2025-09-06.csv  trades_2025-09-07.csv  trades_2025-09-08.csv
auto_trading_bot/: __init__.py  alerts.py  exchange_api.py  main.py  main.py.bak_20251003174802  main.py.bak_20251003175733  metrics.py  mode.py  reporter.py  restart.py  schedulers.py  simulator.py  slack_fmt.py  slack_notifier.py  state_store.py
backtest/: README.md  collect_ohlcv.py  metrics.py  run_from_config.py  run_train_test.py  sim.py  utils.py  validate_data.py
docs/: strategy_history.md  strategy_history.md.bak_20251003180042  strategy_history.md.bak_20251003180209
monitoring/: prometheus.yml
reporting/: README.md  __init__.py  good_to_go_check.py  good_to_go_config.yaml  good_to_go_result.json  report.json  report_metrics.py
scripts/: analyze_data.py  (+15 more)
(+56 files in other folders)
