[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-trading-bot"
version = "0.1.0"
description = "Automated trading bot with CI/CD, metrics, and emergency controls"
requires-python = ">=3.10"
authors = [{name="Auto Trading Bot Team"}]
license = {text = "Proprietary"}
dependencies = []

[tool.setuptools]
packages = ["auto_trading_bot"]
